retrieveTarget/objects/Sumit1__c.object
<CustomObject>
    <description>First</description>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FaceBook__c</fullName>
        <description>Profile Link</description>
        <label>FaceBook</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <description>Employee ID</description>
        <displayFormat>EMP-{00}</displayFormat>
        <inlineHelpText>ID</inlineHelpText>
        <label>ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Mail__c</fullName>
        <description>E-mail</description>
        <label>Mail</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MoneyConv__c</fullName>
        <formula>Money__c * 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MoneyConv</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Money__c</fullName>
        <description>Amount</description>
        <label>Money</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Emp Name</description>
        <inlineHelpText>Enter name</inlineHelpText>
        <label>Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PL1__c</fullName>
        <label>PL1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PL2__c</fullName>
        <label>PL2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PL1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pn_No__c</fullName>
        <description>Phone Number</description>
        <label>Pn. No:</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>YouTube_Video__c</fullName>
        <description>Your video link</description>
        <label>YouTube Video</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>name1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>choomit</label>
        <referenceTo>sr3k4nth__c</referenceTo>
        <relationshipLabel>Sumit1s</relationshipLabel>
        <relationshipName>Sumit1s</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sumit1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SS# {000}</displayFormat>
        <label>Sumit1 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sumit1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>